fix ul to get only css scrollbar

--- a/src/app/horizontal-scrollbar/horizontal-scrollbar.component.css
+++ b/src/app/horizontal-scrollbar/horizontal-scrollbar.component.css
@@ -1,11 +1,16 @@
 /* for the 3rd version */
 .app {
-    padding: 20px 0;
     display: grid;
-    grid-gap: 20px 0;
+    grid-gap: 10px 0;
     grid-template-columns: 20px 1fr 20px;
     align-content: start;
     overflow-x : hidden; 
+
+    border-color : #43c0d6;
+    border-width : 10px;
+    border-style : solid;
+    border-radius: 8px;
+    background: #43c0d6;
 }
   
 ul {
@@ -24,14 +29,32 @@ ul {
     overflow-x : scroll; 
 
     scroll-snap-type: x proximity;
-    padding-bottom: calc(.75 * 20px);
-    margin-bottom: calc(-.25 * 20px);
+    padding-bottom: 10px;
+    margin-bottom: -30px;
 }
 
+/*
 ::-webkit-scrollbar {
     width : 0;
     background : transparent;
 }
+*/
+
+::-webkit-scrollbar {
+    width : 10px
+}
+/* Track */
+::-webkit-scrollbar-track {
+    background : #fff;
+    border : 7px solid #43c0d6;
+    border-radius: 10px;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #fff;
+    border-radius: 10px;
+  }
   
 .hs:before,
 .hs:after {
@@ -40,11 +63,7 @@ ul {
   
 .app {
     width : 400px;
-    border-color : #43c0d6;
-    border-width : 10px;
-    border-style : solid;
-    border-radius: 8px;
-    background: #43c0d6;
+    
 }
   
 .item {
@@ -57,4 +76,21 @@ ul {
 
     font-size : 20px;
     font-family : "Poppins";
+    
+}
+
+.startText {
+    color : #fff;
+    text-align : left;
+    font-size : 20px;
+    font-family : "Poppins";
+    padding-left : 5px
+}
+
+.endText {
+    color : #fff;
+    text-align : right;
+    font-size : 20px;
+    font-family : "Poppins";
+    margin-right : -17px
 }
